# Niblit

./: .coverage  .dockerignore  .env  .env.example  .env.local  .gitignore  .pre-commit-config.yaml  .pylintrc  .vercelignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  FLY_SETUP.md  Fix_Guide.txt  LICENSE  Makefile  NIBLIT_AIOS.md  NOTICE  Package.swift  Procfile  README.md  README_LEGACY.md  RENDER_SETUP.md  RUNTIME_ARCHITECTURE.md  SETUP.md  SLSAGenerator.py  SelfResearcher.py  Slsa_generator_full.py  VERCEL_SETUP.md  __init__.py  ai_dev_lab.db  aios_hal.py  aios_runtime.py  aios_scheduler.py  ale_python_arithmetic_and_mathematical_expression_e.py  ale_python_autonomous_improvement.py  ale_python_binary_file_parsing_with_struct_17737559.py  ale_python_chat_completion_api_client_implementatio.py  ale_python_code_structure_and_indentation.py  (+238 more)
.devcontainer/: devcontainer.json
.github/: dependabot.yml
agents/: __init__.py  architecture_agent.py  base_agent.py  coding_agent.py  document_cognition_agent.py  planner_agent.py  reflection_agent.py  research_agent.py  testing_agent.py
api/: app.py  federation.py  index.py  requirements.txt
assets/: setup_niblit.sh
boot/: install.sh  install_windows.bat  niblit@.service  niblit_boot.sh  niblit_usb.py
chat_logs/: 2025-12-02.txt  2025-12-04.txt  2025-12-05.txt  2026-02-01.txt  2026-02-02.txt  2026-02-08.txt  2026-02-09.txt  2026-02-10.txt  2026-02-11.txt  2026-02-12.txt  2026-02-13.txt  2026-02-14.txt  2026-02-15.txt  2026-02-16.txt
civilization/: __init__.py
core/: __init__.py  cognitive_contract.py  event_bus.py  messages.py  notification_queue.py  orchestrator.py  runtime_health.py  runtime_manager.py  simulation.py
distributed_niblit/: __init__.py
docs/: ANDROID_PROOT_SETUP.md  architecture-principles.md  architecture_alignment.md  automation-governance.md  nrr_v2_architecture.md
kernel/: __init__.py  device_manager.py  fs_manager.py  ipc.py  memory_manager.py  process_manager.py  shell.py  syscall_dispatcher.py
mcp/: llm_client.py  niblit-mcp.yaml  server.py
modules/: __init__.py  academic_study_module.py  adaptive_learning.py  adaptive_market_cognition.py  adaptive_retrieval_cognition.py  agentic_workflows.py  aios_layer_registry.py  ale_checkpoint.py  analytics.py  anthropic_adapter.py  antifraud.py  apk_bootstrap.py  async_first.py  attention_allocator.py  autonomic_runtime_manager.py  autonomous_github.py  autonomous_learning_engine.py  autonomous_network.py  background_jobs.py  background_topic_refresh.py  batch_processing.py  behaviour_adaptation.py  binary_tools.py  bios.py  bios_integration.py  boot_diagnostics.py  bootloader.py  brain_router.py  build_scanner.py  builds_integrator.py  causal_temporal_engine.py  chat_completions.py  circuit_breaker.py  civilization_adapter.py  code_compiler.py  code_error_fixer.py  code_generator.py  code_quality_checker.py  cognition_core.py  cognitive_budget_manager.py  (+240 more)
nibblebots/: README.md  __init__.py  agent_registry.py  ai_trading_bot.py  aios_architecture_bot.py  aios_research_bot.py  anomaly_detector.py  audit_agent.py  autonomous_evolution_agent.py  causal_strategy_engine.py  causality_tracker.py  confidence_decay.py  context_guard.py  context_guard_log.jsonl  delayed_outcome_tracker.py  dependency_analyzer.py  deployment_bot.py  domain_registry.py  evolution_planner.py  feedback_learner.py  goal_adaptation_engine.py  governance_evolution_engine.py  impact_engine.py  impact_weights.json  intent_anchor_engine.py  intent_anchor_log.jsonl  learning_loop_bridge.py  llm_engineer_bot.py  objective_engine.py  observation_collector.py  reality_bridge.py  research_bot.py  rollback_guard.py  semantic_engine.py  signal_integrity_engine.py  stability_controller.py  strategic_planner.py  system_health_monitor.py  system_interface_layer.py  testgap_agent.py  (+3 more)
niblit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
niblit_agents/: __init__.py  research_agent.py  scrapy_research_agent.py  semantic_agent.py
niblit_core/: __init__.py
niblit_memory/: __init__.py  governed_qdrant_memory.py  knowledge_item.py  knowledge_logger.py  knowledge_record.py  knowledge_store.py  memory_compressor.py  qdrant_engine.py  unified_memory_engine.py
niblit_models/: __init__.py  claude_engine.py
niblit_tools/: __init__.py  builtin_tools.py  scrapy_search.py  serpex_api.py  tool_registry.py
nodes/rust/: Cargo.toml  README.md
nodes/rust/src/: main.rs  niblit_client.rs  niblit_state.rs
os/: Makefile  README.md  linker.ld
qdrant_cluster_logic/: README.md
requirements/: android.txt  core.txt  dev.txt  full.txt
runtime/: foundation_architecture.json  persistence_metadata.json  runtime_architecture_model.json
scripts/: niblit-build.js  niblit-dev.js
shared/: __init__.py
tools/: FixGuideGenerator.py  FixGuideGenerator.py.bak.1771069888  __init__.py  cloud_runtime_ctl.py  install_llama_server.sh  install_local_qwen_model.py  kdb_test.py  niblit.db  niblit_ctl.py  repo_audit.py  self_heal_auto.py  self_heal_auto.py.bak.1765115225  self_heal_auto.py.bak.1765115257  self_heal_auto.py.bak.1765404471  self_heal_auto.py.bak.1769899266  self_heal_auto.py.bak.1769902323  self_heal_auto.py.bak.1769930132  (+59 more)
(+591 files in other folders)
