[package]
name = "niblit-node"
version = "1.0.0"
edition = "2021"
description = "Niblit Rust deployment node — communicates with the Niblit Python core and maintains portable cross-environment state."
license = "MIT"

[[bin]]
name = "niblit-node"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.13", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
